--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
- 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
- 	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+	<meta name="description" content="">
 	<meta name="author" content="">
 
 	<!--  tittle -->
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
-	-->
+-->
 
 </head>
 <body>
@@ -28,8 +28,8 @@
 	<header>
 		<h1>Terminal Cheats Sheets</h1>
 		<figure>
-				<img src="images/header_terminal.png" alt="screenshot terminal" title="screenshot terminal">
-				<figcaption>terminal screenshot</figcaption>
+			<img src="images/header_terminal.png" alt="screenshot terminal" title="screenshot terminal">
+			<figcaption>terminal screenshot</figcaption>
 		</figure>	
 	</header>
 	<!-- On peut bien sûr choisir n'importe quel autre nom que "haut" -->
@@ -47,138 +47,147 @@
 					<li><a href="#">Vim et Pluging</a></li>
 					<li><a href="#">Git Hub</a></li>
 					<li><a href="#">A venir</a></li>
-			   </ul>	
+				</ul>	
 			</li>
 		</ul>
 	</nav>
 	<hr>	
 	<section>
-		<p>Exemple Terminal</p>	
-		<article>
-			<h2>Terminal Cheats Sheets</h2>
-		</article>
+		<h2>Terminal Cheats Sheets</h2>
 		<article>
 			<h3>Quelques racourci</h3>
-			<p>===== ONGLETS =====</p> 
+			<p>=====	Onglets	=====</p> 
 			<table>
-				<tr>
-					<th>Commandes</th>
-					<th>Description</th>
-				</tr>
-				<tr>
-					<td>CTRL + MAJ + T</td>
-					<td>Nouvel onglet</td>
-				</tr>
-				<tr>
-					<td>CTRL + MAJ + W</td>
-					<td>Ferme l'onglet actif</td>
-				</tr>
-				<tr>
-					<td>CTRL + PAGE UP</td>
-					<td>Onglet précédent</td>
-				</tr>
-				<tr>
-					<td>CTRL + PAGE DOWN</td>
-					<td>Onglet suivant</td>
-				</tr>
+				<thead>
+					<tr>
+						<th>Commandes</th>
+						<th>Description</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>CTRL + MAJ + T</td>
+						<td>Nouvel onglet</td>
+					</tr>
+					<tr>
+						<td>CTRL + MAJ + W</td>
+						<td>Ferme l'onglet actif</td>
+					</tr>
+					<tr>
+						<td>CTRL + PAGE UP</td>
+						<td>Onglet précédent</td>
+					</tr>
+					<tr>
+						<td>CTRL + PAGE DOWN</td>
+						<td>Onglet suivant</td>
+					</tr>
+				</tbody>
 			</table>
 		</article>
 		<article>	
-			<p>===== AUTO-COMPLÉTION =====</p>
+			<p>=====	Auto-Complétion	=====</p>
 			<table>
-				<tr>
-					<th>Commandes</th>
-					<th>Description</th>
-				</tr>
-				<tr>
-					<td>TAB	</td>
-					<td>Complète la ligne si un choix est possible</td>	
-				</tr>
-				<tr>
-					<td>CTRL + I</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td>TAB + TAB</td>
-					<td>Propose une liste de correspondance possibles</td>
-				</tr>
+				<thead>
+					<tr>
+						<th>Commandes</th>
+						<th>Description</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>TAB	</td>
+						<td>Complète la ligne si un choix est possible</td>	
+					</tr>
+					<tr>
+						<td>CTRL + I</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>TAB + TAB</td>
+						<td>Propose une liste de correspondance possibles</td>
+					</tr>
+				</tbody>
 			</table>
 		</article>
-		<article>	
-			<h3>commandes</h3>
+		<article>
+			<p>=====	Commandes	=====</p>
 			<table>
-				<tr>
-					<th>Commandes</th>
-					<th>Descriptif</th>
-				</tr>
-				<tr>
-					<td>pwd</td>
-					<td> # print working directory</td>
-				</tr>
-				<tr>
-					<td>ls</td>
-					<td># list files in directory</td>
-				</tr>
-				<tr>
-					<td>cd</td>
-					<td># change directory</td>
-				</tr>
-				<tr>
-					<td>~</td>
-					<td># home directory</td>
-				</tr>
-				<tr>
-					<td>..</td>          
-					<td># up one directory</td>
-				</tr>
-				<tr>
-					<td>-</td>
-					<td># previous working directory</td>
-				</tr>
-				<tr>
-					<td>help</td>
-					<td># get help</td>
-				</tr>
-				<tr>
-					<td>-h</td>
-					<td># get help</td>
-				</tr>
-				<tr>
-					<td>--help</td>
-					<td># get help</td>
-				</tr>
-				<tr>
-					<td>man</td>
-					<td># manual</td>
-				</tr>
-				<tr>
-					<td>cat</td>
-					<td># output the contents of a file</td>
-				</tr>
-				<tr>
-					<td>mkdir</td>
-					<td># create new directory</td>
-				</tr>
-				<tr>
-					<td>open</td>        
-					<td># open a file with the associated program, a directory with Finder, or a URL with the default web browser</td>
-				</tr>
-				<tr>
-					<td>ps</td>          
-					<td># list all running processes</td>
-				</tr>
-				<tr>
-					<td>kill</td>        
-					<td># terminate existing process</td>
-				</tr>
-				<tr>
-					<td>rmd</td>         
-					<td># permanently delete files</td>
-				</tr>
-				<tr>
-					<td>rmdir</td> 
-					<td># remove directory</td>
-				</tr>
+				<thead>
+					<tr>
+						<th>Commandes</th>
+						<th>Descriptif</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>pwd</td>
+						<td> # print working directory</td>
+					</tr>
+					<tr>
+						<td>ls</td>
+						<td># list files in directory</td>
+					</tr>
+					<tr>
+						<td>cd</td>
+						<td># change directory</td>
+					</tr>
+					<tr>
+						<td>~</td>
+						<td># home directory</td>
+					</tr>
+					<tr>
+						<td>..</td>          
+						<td># up one directory</td>
+					</tr>
+					<tr>
+						<td>-</td>
+						<td># previous working directory</td>
+					</tr>
+					<tr>
+						<td>help</td>
+						<td># get help</td>
+					</tr>
+					<tr>
+						<td>-h</td>
+						<td># get help</td>
+					</tr>
+					<tr>
+						<td>--help</td>
+						<td># get help</td>
+					</tr>
+					<tr>
+						<td>man</td>
+						<td># manual</td>
+					</tr>
+					<tr>
+						<td>cat</td>
+						<td># output the contents of a file</td>
+					</tr>
+					<tr>
+						<td>mkdir</td>
+						<td># create new directory</td>
+					</tr>
+					<tr>
+						<td>open</td>        
+						<td># open a file with the associated program, a directory with Finder, or a URL with the default web browser</td>
+					</tr>
+					<tr>
+						<td>ps</td>          
+						<td># list all running processes</td>
+					</tr>
+					<tr>
+						<td>kill</td>        
+						<td># terminate existing process</td>
+					</tr>
+					<tr>
+						<td>rmd</td>         
+						<td># permanently delete files</td>
+					</tr>
+					<tr>
+						<td>rmdir</td> 
+						<td># remove directory</td>
+					</tr>
+				</tbody>
 			</table>
 		</article>
 	</section>
@@ -190,11 +199,11 @@
 		<a href="license.html">© 2018 | Created by fulmack.</a>
 		<h4>Links</h4>
 		<ul class="social">
-	        <li class="twitter"><a href="https://twitter.com/vantieghemsylv1">Follow me on Twitter</a></li>
-	        <li class="linkedin"><a href="https://www.linkedin.com/in/sylvain-vantieghem-a863b1136/">Add me on linkedin</a></li>
-	        <li class="Git Hub"><a href="https://github.com/sylvainvant">Add me on Git Hub</a></li>
-	        <li class="facebook"><a href="https://www.facebook.com/sylvainvantieghem">Add me on Facebook</a></li>
-	    </ul>
+			<li class="twitter"><a href="https://twitter.com/vantieghemsylv1">Follow me on Twitter</a></li>
+			<li class="linkedin"><a href="https://www.linkedin.com/in/sylvain-vantieghem-a863b1136/">Add me on linkedin</a></li>
+			<li class="Git Hub"><a href="https://github.com/sylvainvant">Add me on Git Hub</a></li>
+			<li class="facebook"><a href="https://www.facebook.com/sylvainvantieghem">Add me on Facebook</a></li>
+		</ul>
 	</footer>
 
 	<!-- link java script pour plus tard 
@@ -202,6 +211,6 @@
 	<script src="bootstrap/js/jquery.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
-	-->
+-->
 </body>
 </html>
